--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ hex = "0.4.3"
 
 # Logging
 tracing            = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 
 # Time
 chrono = { version = "0.4", features = ["serde"] }
