feat: Add World ID module (#21)
* Bump rust to 1.86

* Add world id module to backend server

* Add comments and cleanup code

* Add licenses and and ignore warnings due to walletkit/semaphore

* Add comment

* Move world id deps to backend only, and use only needed walletkit features

* Rename error enum

* Address license comment

* Remove redundant struct

* Update comment

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -50,6 +50,11 @@ hex = { workspace = true }
 # Backend Storage
 backend_storage = { workspace = true }
 
+# World ID
+walletkit-core = { version = "0.1.3", features= ["semaphore"], default-features = false }
+semaphore-rs = { version = "0.5" }
+reqwest = { workspace = true }
+
 [dev-dependencies]
 http-body-util = { workspace = true }
 tower = { workspace = true }
