--- a/deny.toml
+++ b/deny.toml
@@ -31,6 +31,7 @@ allow = [
     "BSD-2-Clause",
     "BSD-3-Clause",
     "BSL-1.0",
+    "CC0-1.0",
     "CDLA-Permissive-2.0",
     "ISC",
     "MIT",
@@ -40,7 +41,16 @@ allow = [
     "Zlib",
 ]
 
+# Specific exceptions for crates we can't avoid
+exceptions = [
+    # webpki-roots v0.25.4 is a build dependency of semaphore-rs
+    # It won't be included in the final binary, only used during compilation
+    { allow = ["MPL-2.0"], name = "webpki-roots", version = "0.25.4" },
+]
+
+# Ignore unmaintained required crates warning
 [advisories]
-# Security advisories to check
-# The ignore list can be used to ignore specific advisories that don't affect your project
-ignore = []
+ignore = [
+    "RUSTSEC-2024-0388",  # Unmaintained `derivative` (2024-11-22)
+    "RUSTSEC-2024-0436", # Unmaintained `paste` (2025-04-04)
+]
