--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -27,6 +27,9 @@ serde_json = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
+# Datadog tracing
+datadog-tracing = { version = "0.3.0", features = ["axum"] }
+
 # Error handling
 anyhow = { workspace = true }
 thiserror = { workspace = true }
