--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,9 @@ backend_storage = { path = "shared/backend_storage" }
 # HTTP client
 reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
 
+# JWT
+jsonwebtoken = "9.3"
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
