--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -55,7 +55,7 @@ hex = { workspace = true }
 backend_storage = { workspace = true }
 
 # World ID
-walletkit-core = { version = "0.1.3", features= ["semaphore"], default-features = false }
+walletkit-core = { version = "0.1.4", features= ["semaphore"], default-features = false }
 semaphore-rs = { version = "0.5" }
 reqwest = { workspace = true }
 
@@ -75,3 +75,4 @@ dotenvy = { workspace = true }
 serial_test = { workspace = true }
 rand = { workspace = true }
 http = { workspace = true }
+aws-credential-types = { version = "1.2.5", features = ["hardcoded-credentials"] }
