--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -75,3 +75,4 @@ dotenvy = { workspace = true }
 serial_test = { workspace = true }
 rand = { workspace = true }
 http = { workspace = true }
+aws-credential-types = { version = "1.2.5" , features = ["hardcoded-credentials"]}
