--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,9 @@ DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
 
 SUBSCRIPTION_QUEUE_URL=https://sqs.region.amazonaws.com/account/subscription-request-queue.fifo
 NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
+
+JWT_SECRET_NAME=world-chat-jwt-secret
+
+WORLD_ID_APP_ID=world-chat-backend-dev
+WORLD_ID_ACTION=authorize
+WORLD_ID_ENV=staging
