--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,12 +160,7 @@ jobs:
           docker run -d \
             --name world-chat-backend-test \
             -p 8000:8000 \
-            -e APP_ENV=development \
-            -e S3_BUCKET_NAME=test-bucket \
-            -e JWT_SECRET_NAME=world-chat-jwt-secret \
-            -e AWS_ACCESS_KEY_ID=test \
-            -e AWS_SECRET_ACCESS_KEY=test \
-            -e AWS_DEFAULT_REGION=us-east-1 \
+            --env-file backend/.env.example \
             world-chat-backend:latest
 
           # Wait for the application to start
