--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ aws-config = "1.5"
 aws-sdk-sqs = "1.64"
 aws-sdk-dynamodb = "1.82"
 aws-sdk-s3 = "1.82"
-aws-sdk-secretsmanager = "1.82"
+aws-sdk-kms = "1.82"
 
 # Schema generation for OpenAPI
 schemars = { version = "0.8.21", features = ["derive"] }
