--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,9 @@ reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], defau
 # JWT
 jsonwebtoken = "9.3"
 
+# OpenSSL
+openssl = "0.10.73"
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
