--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -63,6 +63,9 @@ reqwest = { workspace = true }
 josekit = "0.10.0"
 sha2 = { workspace = true }
 
+# OpenSSL
+openssl = { workspace = true }
+
 [dev-dependencies]
 http-body-util = { workspace = true }
 tower = { workspace = true }
