--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,11 +76,8 @@ reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], defau
 # Mime types
 mime = "0.3.0"
 
-# JWT
-jsonwebtoken = "9.3"
-
 # OpenSSL
-openssl = "0.10.73"
+openssl = { version = "0.10.73", features = ["vendored"] }
 
 # Test dependencies
 http-body-util = "0.1.3"
