--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ aws-config = "1.5"
 aws-sdk-sqs = "1.64"
 aws-sdk-dynamodb = "1.82"
 aws-sdk-s3 = "1.82"
+aws-sdk-kms = "1.82"
 
 # Schema generation for OpenAPI
 schemars = { version = "0.8.21", features = ["derive"] }
@@ -74,6 +75,9 @@ reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], defau
 
 # Mime types
 mime = "0.3.0"
+
+# OpenSSL
+openssl = { version = "0.10.73", features = ["vendored"] }
 
 # Test dependencies
 http-body-util = "0.1.3"
