--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=development
-RUST_LOG=INFO
+RUST_LOG=DEBUG
 
 AWS_ACCESS_KEY_ID=test
 AWS_SECRET_ACCESS_KEY=test
@@ -11,3 +11,9 @@ DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
 
 SUBSCRIPTION_QUEUE_URL=https://sqs.region.amazonaws.com/account/subscription-request-queue.fifo
 NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
+
+JWT_KMS_KEY_ARN=alias/world-chat-jwt
+
+WORLD_ID_APP_ID=world-chat-backend-dev
+WORLD_ID_ACTION=authorize
+WORLD_ID_ENV=staging
