--- a/notification-worker/.env.example
+++ b/notification-worker/.env.example
@@ -10,3 +10,10 @@ XMTP_CONNECTION_TIMEOUT_MS=5000
 
 # XMTP Endpoint URL
 XMTP_ENDPOINT_URL=http://localhost:25556
+
+# Push Subscription table
+DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
+DYNAMODB_PUSH_TOPIC_GSI_NAME=topic-index
+
+# Notification Queue 
+NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
