--- a/notification-worker/Cargo.toml
+++ b/notification-worker/Cargo.toml
@@ -37,6 +37,7 @@ rustls = { version = "0.23", features = ["ring"] }
 
 sha2 = { workspace = true }
 hmac = { workspace = true }
+base64 = {workspace = true}
 
 [dev-dependencies]
 serial_test = { workspace = true }
