--- a/notification-worker/Cargo.toml
+++ b/notification-worker/Cargo.toml
@@ -29,6 +29,10 @@ tokio-stream = "0.1"
 tokio-util = "0.7"
 flume = "0.11"
 
+# HTTP server for health checks
+axum = { workspace = true }
+tower = { workspace = true }
+
 # For future XMTP integration
 tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots"] }
 prost = "0.13"
