--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,5 @@ JWT_KMS_KEY_ARN=alias/world-chat-jwt
 WORLD_ID_APP_ID=world-chat-backend-dev
 WORLD_ID_ACTION=authorize
 WORLD_ID_ENV=staging
+
+AWS_ENDPOINT_URL=http://localstack:4566
