--- a/notification-worker/.env.example
+++ b/notification-worker/.env.example
@@ -1,5 +1,5 @@
 
-RUST_LOG=info
+RUST_LOG=INFO
 APP_ENV=development
 
 # Timeout configurations (optional)
@@ -9,7 +9,7 @@ XMTP_REQUEST_TIMEOUT_MS=30000
 XMTP_CONNECTION_TIMEOUT_MS=5000
 
 # XMTP Endpoint URL
-XMTP_ENDPOINT_URL=http://localhost:25556
+XMTP_ENDPOINT_URL=http://localhost:5556
 
 # Push Subscription table
 DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
