Add aws env keys for testing

--- a/notification-worker/.env.example
+++ b/notification-worker/.env.example
@@ -2,6 +2,10 @@
 RUST_LOG=INFO
 APP_ENV=development
 
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+AWS_DEFAULT_REGION=us-east-1
+
 # Timeout configurations (optional)
 XMTP_RECONNECT_DELAY_MS=100
 XMTP_MAX_RECONNECT_DELAY_MS=30000
