--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
   # Provides gRPC API that the notification worker connects to for receiving messages
   # Handles message storage, MLS operations, and serves as the primary XMTP network interface
   xmtp-node:
-    image: xmtp/node-go:latest
+    image: ghcr.io/xmtp/node-go:main
     platform: linux/amd64
     networks:
       - world-chat-network
@@ -55,8 +55,8 @@ services:
       - --api.enable-mls # Enable MLS (Message Layer Security) features
       - --wait-for-db=30s # Wait for databases to be ready before starting
     ports:
-      - 25555:5555 # gRPC API port - used by notification worker
-      - 25556:5556 # Additional API port
+      - 5555:5555 # gRPC API port - used by notification worker
+      - 5556:5556 # Additional API port
     depends_on:
       - db
       - mlsdb
