--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,8 +16,9 @@ axum-jsonschema = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 
-# Async runtime
+# Async 
 tokio = { workspace = true }
+futures = { workspace = true }
 
 # Serialization
 serde = { workspace = true }
