feat: Implement message filtering logic (#35)
* Rename to XmtpEnvelope and filter for V3 topics

* Remove custom envelope type alias

* Add utils for xmtp messages

* Add hmac and sha2

* Rename to push id

* Update notification queue message

* Complete message filtering flow

* Add comments for code gen types

* Rename to  xmtp_utils

* Add link to docker compose

* Init aws recourses outside of worker

* Scaffold test context

* Add xmtp test client util

* Add tests

* Simplify content topics

* Comment

* Cleanup

* Add aws env keys for testing

* Revert cargo changes

* ContentBasedDeduplication flag

* Add .env.test

--- a/notification-worker/Cargo.toml
+++ b/notification-worker/Cargo.toml
@@ -35,8 +35,17 @@ prost = "0.13"
 prost-types = "0.13"
 rustls = { version = "0.23", features = ["ring"] }
 
+sha2 = { workspace = true }
+hmac = { workspace = true }
+base64 = {workspace = true}
+hex = { workspace = true }
+
+# Testing dependencies
 [dev-dependencies]
+uuid = { workspace = true }
 serial_test = { workspace = true }
+dotenvy = { workspace = true }
+pretty_assertions = "1.4.1"
 
 # Build dependencies
 [build-dependencies]
