--- a/deny.toml
+++ b/deny.toml
@@ -47,4 +47,5 @@ exceptions = [
 ignore = [
     "RUSTSEC-2024-0388",  # Unmaintained `derivative` (2024-11-22)
     "RUSTSEC-2024-0436", # Unmaintained `paste` (2025-04-04)
+    "RUSTSEC-2025-0055", # Unmaintained peer dependency of `semaphore-rs` with minimal impact
 ]
