--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,9 @@ p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
 
 hmac = "0.12.1"
 
+# Datadog tracing
+datadog-tracing = { version = "0.3.0", features = ["axum"] }
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
