--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -28,7 +28,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 # Datadog tracing
-datadog-tracing = { version = "0.3.0", features = ["axum"] }
+datadog-tracing = { workspace = true }
 
 # Error handling
 anyhow = { workspace = true }
