--- a/secure-enclave/Dockerfile
+++ b/secure-enclave/Dockerfile
@@ -1,37 +1,45 @@
-
-########################################################
-#### Builder
-########################################################
-
-FROM clux/muslrust:stable AS chef
-USER root
-RUN cargo install cargo-chef
+# Use cargo-chef to cache dependencies
+FROM rust:1.86.0-slim AS chef
 WORKDIR /app
 
+# Install dependencies for building
+RUN apt-get update && apt-get install -y \
+    pkg-config \
+    build-essential \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN cargo install cargo-chef
+
+# Plan stage - creates recipe.json for dependency caching
 FROM chef AS planner
 COPY . .
-RUN cargo chef prepare --recipe-path recipe.json --bin secure-enclave
+RUN cargo chef prepare --recipe-path recipe.json
 
+# Build stage - cooks dependencies then builds application
 FROM chef AS builder
+
+# Copy recipe and build dependencies (cached if unchanged)
 COPY --from=planner /app/recipe.json recipe.json
+RUN cargo chef cook --release --recipe-path recipe.json
 
-RUN --mount=type=secret,id=GITHUB_TOKEN \
-    GITHUB_TOKEN=$(cat /run/secrets/GITHUB_TOKEN) && \
-    git config --global url."https://${GITHUB_TOKEN}@github.com/worldcoin/".insteadOf "https://github.com/worldcoin/"
-
-# Build dependencies - this is the caching Docker layer!
-RUN cargo chef cook --release --target x86_64-unknown-linux-musl --recipe-path recipe.json --package secure-enclave --bin secure-enclave
+# Copy source code and build application
 COPY . .
-RUN cargo build --release --target x86_64-unknown-linux-musl --package secure-enclave
+RUN cargo build --package secure-enclave --locked --release
 
-########################################################
-#### Runner
-########################################################
-FROM alpine AS runtime
-RUN addgroup -S rust && adduser -S rust -G rust
+# Runtime stage - Amazon Linux 2023
+FROM public.ecr.aws/amazonlinux/amazonlinux:2023-minimal
+
+# Install runtime dependencies using microdnf (available in minimal image)
+RUN microdnf update -y && \
+    microdnf install -y \
+    ca-certificates \
+    && microdnf clean all
+
 WORKDIR /app
 
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/secure-enclave /usr/local/bin/
+# Copy the binary from builder
+COPY --from=builder /app/target/release/secure-enclave /usr/local/bin/secure-enclave
 
-USER rust
-CMD ["/usr/local/bin/secure-enclave"]
+# Set the entrypoint
+ENTRYPOINT ["/usr/local/bin/secure-enclave"]
