--- a/secure-enclave/Cargo.toml
+++ b/secure-enclave/Cargo.toml
@@ -18,3 +18,6 @@ tracing-subscriber = { workspace = true }
 
 # Error handling
 anyhow = { workspace = true }
+
+enclave-types = { workspace = true }
+pontifex = { workspace = true, features = ["server", "http"] } 
