--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ members = [
     "secure-enclave",
     "shared/backend_storage",
     "notification-worker",
-    "shared/enclave-types",
-    "pontifex"
+    "shared/enclave-types"
 ]
 resolver = "2"
 
@@ -82,7 +81,7 @@ mime = "0.3.0"
 p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
 hmac = "0.12.1"
 
-pontifex = { path="pontifex" }
+pontifex = { path="../pontifex" }
 
 enclave-types = { path="shared/enclave-types" }
 
