--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,9 @@ axum = "0.7.9"
 tower      = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 
-# Async runtime
+# Async 
 tokio = { version = "1.47.1", features = ["full"] }
+futures = "0.3.31"
 
 # Serialization
 serde      = { version = "1.0", features = ["derive"] }
