Remove pontifex for now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,8 +82,7 @@ p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
 
 hmac = "0.12.1"
 
-# Enclave related
-pontifex = "0.1.5"
+# Enclave types
 enclave-types = { path = "shared/enclave-types" }
 
 # Test dependencies
