--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,9 +117,18 @@ jobs:
           command: check ${{ matrix.checks }}
           rust-version: stable
 
-  build-docker-backend:
+  build-docker:
     name: Build and Test Docker
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service:
+          - name: backend
+            port: 8000
+            health_endpoint: /health
+          - name: notification-worker
+            port: 8001
+            health_endpoint: /health
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -127,44 +136,47 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build backend Docker image
+      - name: Build ${{ matrix.service.name }} Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: backend/Dockerfile
+          file: ${{ matrix.service.name }}/Dockerfile
           push: false
           load: true
-          tags: world-chat-backend:latest
+          tags: ${{ matrix.service.name }}:latest
+          build-args: GIT_REV=${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
 
-      - name: Start LocalStack and wait for it to be healthy
+      - name: Start LocalStack and XMTP Node and wait for it to be healthy
         run: |
-          docker compose up -d --wait localstack
+          docker compose up -d --wait localstack xmtp-node
 
-      - name: Run backend container
+      - name: Run ${{ matrix.service.name }} container
         run: |
           # Use the explicit network defined in docker-compose.yml
+          # Override endpoints for test container
           docker run -d \
-            --name world-chat-backend-test \
+            --name ${{ matrix.service.name }}-test \
             --network world-chat-network \
-            -p 8000:8000 \
-            -e AWS_ENDPOINT_URL=http://localstack:4566 \
-            --env-file backend/.env.example \
-            world-chat-backend:latest
+            -p ${{ matrix.service.port }}:${{ matrix.service.port }} \
+            --env-file ${{ matrix.service.name }}/.env.example \
+            --env XMTP_ENDPOINT_URL=http://xmtp-node:5556 \
+            --env AWS_ENDPOINT_URL=http://localstack:4566 \
+            ${{ matrix.service.name }}:latest
 
           # Wait for the application to start
           sleep 5
 
           # Output logs for debugging
-          docker logs world-chat-backend-test
+          docker logs ${{ matrix.service.name }}-test
 
       - name: Health check Docker container
-        run: curl -f http://0.0.0.0:8000/health
+        run: curl -f http://0.0.0.0:${{ matrix.service.port }}${{ matrix.service.health_endpoint }}
 
       - name: Clean up
         run: |
-          docker stop world-chat-backend-test || true
-          docker rm world-chat-backend-test || true
+          docker stop ${{ matrix.service.name }}-test || true
+          docker rm ${{ matrix.service.name }}-test || true
           docker compose down
