--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,9 @@ hmac = "0.12.1"
 # Enclave types
 enclave-types = { path = "shared/enclave-types" }
 
+# Datadog tracing
+datadog-tracing = { version = "0.3.0", features = ["axum"] }
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
