--- a/enclave-worker/Dockerfile
+++ b/enclave-worker/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 # Install dependencies for building
 RUN apt-get update && apt-get install -y \
+    musl-tools \
+    clang \
     pkg-config \
     build-essential \
     ca-certificates \
@@ -19,13 +21,16 @@ RUN cargo chef prepare --recipe-path recipe.json
 # Build stage - cooks dependencies then builds application
 FROM chef AS builder
 
+ARG GIT_REV
+ENV GIT_REV=${GIT_REV}
+
 # Copy recipe and build dependencies (cached if unchanged)
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 
 # Copy source code and build application
 COPY . .
-RUN cargo build --package enclave-worker --locked --release
+RUN cargo build --package enclave-worker --locked --release --target x86_64-unknown-linux-musl
 
 # Runtime stage
 FROM scratch
