--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 
 # Async 
 tokio = { version = "1.47.1", features = ["full"] }
+tokio-util = { version = "0.7.11" }
 futures = "0.3.31"
 
 # Serialization
