Add call to braze

--- a/enclave-worker/Cargo.toml
+++ b/enclave-worker/Cargo.toml
@@ -39,3 +39,5 @@ backend_storage = { workspace = true }
 
 schemars = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
+reqwest = { workspace = true }
