--- a/enclave-worker/.env.example
+++ b/enclave-worker/.env.example
@@ -11,3 +11,7 @@ NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-que
 
 ENCLAVE_CID=16
 ENCLAVE_PORT=1000
+
+# Passed onto the enclave
+BRAZE_API_KEY=your_api_key_here
+BRAZE_API_URL=https://rest.iad-05.braze.com
