feat: Add Dockerfile and CI check for enclave-worker (#50)
* Add Dockerfile and CI check for enclave-worker

* Fix dockerfile

* Update enclave-worker/Dockerfile

Co-authored-by: Andy Wang <41224501+andy-t-wang@users.noreply.github.com>

---------

Co-authored-by: Andy Wang <41224501+andy-t-wang@users.noreply.github.com>

--- a/enclave-worker/Dockerfile
+++ b/enclave-worker/Dockerfile
@@ -1,37 +1,49 @@
-
-########################################################
-#### Builder
-########################################################
-
-FROM clux/muslrust:stable AS chef
-USER root
-RUN cargo install cargo-chef
+# Use cargo-chef to cache dependencies
+FROM rust:1.86.0-slim AS chef
 WORKDIR /app
 
+# Install dependencies for building
+RUN apt-get update && apt-get install -y \
+    musl-tools \
+    clang \
+    pkg-config \
+    build-essential \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN cargo install cargo-chef
+
+# Plan stage - creates recipe.json for dependency caching
 FROM chef AS planner
 COPY . .
-RUN cargo chef prepare --recipe-path recipe.json --bin enclave-worker
+RUN cargo chef prepare --recipe-path recipe.json
 
+# Build stage - cooks dependencies then builds application
 FROM chef AS builder
+
+ARG GIT_REV
+ENV GIT_REV=${GIT_REV}
+
+# Copy recipe and build dependencies (cached if unchanged)
 COPY --from=planner /app/recipe.json recipe.json
+RUN cargo chef cook --release --recipe-path recipe.json
 
-RUN --mount=type=secret,id=GITHUB_TOKEN \
-    GITHUB_TOKEN=$(cat /run/secrets/GITHUB_TOKEN) && \
-    git config --global url."https://${GITHUB_TOKEN}@github.com/worldcoin/".insteadOf "https://github.com/worldcoin/"
-
-# Build dependencies - this is the caching Docker layer!
-RUN cargo chef cook --release --target x86_64-unknown-linux-musl --recipe-path recipe.json --package enclave-worker --bin enclave-worker
+# Copy source code and build application
 COPY . .
-RUN cargo build --release --target x86_64-unknown-linux-musl --package enclave-worker
+RUN cargo build --package enclave-worker --locked --release --target x86_64-unknown-linux-musl
 
-########################################################
-#### Runner
-########################################################
-FROM alpine AS runtime
-RUN addgroup -S rust && adduser -S rust -G rust
+# Runtime stage
+FROM scratch
+
 WORKDIR /app
 
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/enclave-worker /usr/local/bin/
+# Copy SSL certificates
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-USER rust
-CMD ["/usr/local/bin/enclave-worker"]
+# Copy the binary
+COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/enclave-worker /app/enclave-worker
+
+# Set the entrypoint
+USER 100
+EXPOSE 8002
+ENTRYPOINT ["/app/enclave-worker"]
