Use correct target

--- a/enclave-worker/Dockerfile
+++ b/enclave-worker/Dockerfile
@@ -11,6 +11,8 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
+RUN rustup target add x86_64-unknown-linux-musl
+
 RUN cargo install cargo-chef
 
 # Plan stage - creates recipe.json for dependency caching
@@ -23,7 +25,7 @@ FROM chef AS builder
 
 # Copy recipe and build dependencies (cached if unchanged)
 COPY --from=planner /app/recipe.json recipe.json
-RUN cargo chef cook --release --recipe-path recipe.json
+RUN cargo chef cook --release --target x86_64-unknown-linux-musl --recipe-path recipe.json 
 
 ARG GIT_REV
 ENV GIT_REV=${GIT_REV}
