feat: Scaffold notification delivery with Braze (#56)
* Scaffold notification consumer

* 2

* Add call to braze

* Rename to NotificationProcessor

* Modify example env var

--- a/enclave-worker/Cargo.toml
+++ b/enclave-worker/Cargo.toml
@@ -18,6 +18,7 @@ tower-http = { workspace = true }
 
 # Async runtime
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 
 # Logging
 tracing = { workspace = true }
@@ -38,3 +39,5 @@ backend_storage = { workspace = true }
 
 schemars = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
+reqwest = { workspace = true }
