--- a/enclave-worker/.env.example
+++ b/enclave-worker/.env.example
@@ -7,7 +7,11 @@ AWS_DEFAULT_REGION=us-east-1
 
 DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
 
-NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
+NOTIFICATION_QUEUE_URL=http://localhost:4566/000000000000/notification-queue.fifo 
 
 ENCLAVE_CID=16
 ENCLAVE_PORT=1000
+
+# Passed onto the enclave
+BRAZE_API_KEY=your_api_key_here
+BRAZE_API_URL=https://rest.iad-05.braze.com
