--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -67,6 +67,8 @@ mime = { workspace = true }
 p256 = { workspace = true }
 sha2 = { workspace = true }
 
+common-types = { workspace = true }
+
 [dev-dependencies]
 http-body-util = { workspace = true }
 tower = { workspace = true }
