--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-util = { version = "0.7.11" }
 futures = "0.3.31"
+async-trait = "0.1.89"
 
 # Serialization
 serde      = { version = "1.0", features = ["derive"] }
