--- a/secure-enclave/Cargo.toml
+++ b/secure-enclave/Cargo.toml
@@ -9,12 +9,19 @@ name = "secure-enclave"
 path = "src/main.rs"
 
 [dependencies]
-# Async runtime
-tokio = { workspace = true }
-
 # Logging
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 # Error handling
 anyhow = { workspace = true }
+
+axum = { workspace = true }
+hyper = { version = "1.0.0", features = ["full"] }
+hyper-util = { version = "0.1", features = ["http2"] }
+tokio = { version = "1", features = ["full"] }
+tokio-rustls = {  version = "0.26", features = ["aws_lc_rs","logging","tls12"], default-features = false }
+tower-service = "0.3.2"
+tokio-vsock = "0.7"
+rcgen = "0.14.4"
+
