--- a/enclave-worker/Dockerfile
+++ b/enclave-worker/Dockerfile
@@ -2,18 +2,18 @@
 FROM rust:1.86.0-slim AS chef
 WORKDIR /app
 
-# Install dependencies for building
+# Install musl target and dependencies
 RUN apt-get update && apt-get install -y \
     musl-tools \
     clang \
     pkg-config \
     build-essential \
     ca-certificates \
-    && rm -rf /var/lib/apt/lists/*
+ && rm -rf /var/lib/apt/lists/*
 
 RUN rustup target add x86_64-unknown-linux-musl
 
-RUN cargo install cargo-chef
+RUN cargo install cargo-chef 
 
 # Plan stage - creates recipe.json for dependency caching
 FROM chef AS planner
@@ -23,16 +23,16 @@ RUN cargo chef prepare --recipe-path recipe.json
 # Build stage - cooks dependencies then builds application
 FROM chef AS builder
 
-# Copy recipe and build dependencies (cached if unchanged)
-COPY --from=planner /app/recipe.json recipe.json
-RUN cargo chef cook --release --target x86_64-unknown-linux-musl --recipe-path recipe.json 
-
 ARG GIT_REV
 ENV GIT_REV=${GIT_REV}
 
+# Copy recipe and build dependencies (cached if unchanged)
+COPY --from=planner /app/recipe.json recipe.json
+RUN cargo chef cook --release --target x86_64-unknown-linux-musl --recipe-path recipe.json
+
 # Copy source code and build application
 COPY . .
-RUN cargo build --package enclave-worker --locked --release --target x86_64-unknown-linux-musl
+RUN cargo build --package secure-enclave --locked --release --target x86_64-unknown-linux-musl
 
 # Runtime stage
 FROM scratch
@@ -43,9 +43,6 @@ WORKDIR /app
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 # Copy the binary
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/enclave-worker /app/enclave-worker
+COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/secure-enclave /app/secure-enclave
 
-# Set the entrypoint
-USER 100
-EXPOSE 8002
-ENTRYPOINT ["/app/enclave-worker"]
+ENTRYPOINT ["/app/secure-enclave"]
