--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ members = [
     "secure-enclave",
     "shared/backend_storage",
     "notification-worker",
+     # TODO remove this and move types to common-types
     "shared/enclave-types",
+    "shared/common-types",
 ]
 resolver = "2"
 
@@ -31,6 +33,7 @@ tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-util = { version = "0.7.11" }
 futures = "0.3.31"
+async-trait = "0.1.89"
 
 # Serialization
 serde      = { version = "1.0", features = ["derive"] }
@@ -86,6 +89,9 @@ hmac = "0.12.1"
 
 # Enclave types
 enclave-types = { path = "shared/enclave-types" }
+
+# Common types 
+common-types = { path = "shared/common-types" }
 
 # Datadog tracing
 datadog-tracing = { version = "0.3.0", features = ["axum"] }
