--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,9 @@ pontifex = { version = "1.0.1" }
 # Datadog tracing
 datadog-tracing = { version = "0.3.0", features = ["axum"] }
 
+# Crypto box
+crypto_box = { version = "0.9.1" }
+
 # Test dependencies
 http-body-util = "0.1.3"
 tokio-test = "0.4.4"
