--- a/secure-enclave/Cargo.toml
+++ b/secure-enclave/Cargo.toml
@@ -12,6 +12,9 @@ path = "src/main.rs"
 # Async runtime
 tokio = { workspace = true }
 
+
+crypto_box = { workspace = true, features = ["seal"] }
+
 # Logging
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
@@ -20,6 +23,6 @@ tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 
 # Pontifex server
-pontifex = { workspace = true, features = ["server", "http"] }
+pontifex = { workspace = true, features = ["server", "http", "nsm"] }
 
 enclave-types = { workspace = true }
