--- a/shared/enclave-types/Cargo.toml
+++ b/shared/enclave-types/Cargo.toml
@@ -11,4 +11,4 @@ thiserror = { workspace = true }
 # Serialization
 serde = { workspace = true }
 
-pontifex = { workspace = true }
+pontifex = { workspace = true, features = ["nsm"] }
