--- a/deny.toml
+++ b/deny.toml
@@ -48,4 +48,5 @@ ignore = [
     "RUSTSEC-2024-0388",  # Unmaintained `derivative` (2024-11-22)
     "RUSTSEC-2024-0436", # Unmaintained `paste` (2025-04-04)
     "RUSTSEC-2025-0055", # Unmaintained peer dependency of `semaphore-rs` with minimal impact
+    "RUSTSEC-2021-0127", # serde_cbor is unmaintained. We use this in AWS NSM package but just for the AttestationDocument Type
 ]
