--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,9 +7,9 @@ AWS_DEFAULT_REGION=us-east-1
 
 S3_BUCKET_NAME=world-chat-media
 
+DYNAMODB_AUTH_TABLE_NAME=world-chat-auth-proofs
 DYNAMODB_PUSH_TABLE_NAME=world-chat-push-subscriptions
 
-SUBSCRIPTION_QUEUE_URL=https://sqs.region.amazonaws.com/account/subscription-request-queue.fifo
 NOTIFICATION_QUEUE_URL=https://sqs.region.amazonaws.com/account/notification-queue.fifo
 
 JWT_KMS_KEY_ARN=alias/world-chat-jwt
