--- a/secure-enclave/Cargo.toml
+++ b/secure-enclave/Cargo.toml
@@ -26,3 +26,7 @@ anyhow = { workspace = true }
 pontifex = { workspace = true, features = ["server", "http", "nsm"] }
 
 enclave-types = { workspace = true }
+
+serde_json = { workspace = true }
+
+hyper = { workspace = true }
