--- a/enclave-worker/.env.example
+++ b/enclave-worker/.env.example
@@ -14,4 +14,5 @@ ENCLAVE_PORT=1000
 
 # Passed onto the enclave
 BRAZE_API_KEY=your_api_key_here
-BRAZE_API_URL=https://rest.iad-05.braze.com
+BRAZE_API_REGION=iad-05
+BRAZE_HTTP_PROXY_PORT=9002
